Updated referencces for semiconductor example

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -55,3 +55,64 @@
   journal={arXiv preprint arXiv:2102.02087},
   year={2021}
 }
+
+@article{wise1999comparison,
+  title={A comparison of principal component analysis, multiway principal component analysis, trilinear decomposition and parallel factor analysis for fault detection in a semiconductor etch process},
+  author={Wise, Barry M and Gallagher, Neal B and Butler, Stephanie Watts and White Jr, Daniel D and Barna, Gabriel G},
+  journal={Journal of Chemometrics: A Journal of the Chemometrics Society},
+  volume={13},
+  number={3-4},
+  pages={379--396},
+  year={1999},
+  publisher={Wiley Online Library}
+}
+
+@article{wise2001application,
+  title={Application of PARAFAC2 to fault detection and diagnosis in semiconductor etch},
+  author={Wise, Barry M and Gallagher, Neal B and Martin, Elaine B},
+  journal={Journal of Chemometrics: A Journal of the Chemometrics Society},
+  volume={15},
+  number={4},
+  pages={285--298},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@article{kossaifi2019tensorly,
+  title={TensorLy: Tensor Learning in Python},
+  author={Kossaifi, Jean and Panagakis, Yannis and Anandkumar, Anima and Pantic, Maja},
+  journal={Journal of Machine Learning Research},
+  volume={20},
+  number={26},
+  pages={1--6},
+  year={2019}
+}
+
+@article{harshman1972parafac2,
+  author={Harshman, Richard A},
+  year={1972},
+  title={{PARAFAC2}: Mathematical and technical notes},
+  journal={{UCLA} Working Papers in Phonetics},
+  volume={22},
+  pages={30--44}
+}
+
+@article{yu2021parafac2,
+  title={PARAFAC2 and local minima},
+  author={Yu, Huiwen and Bro, Rasmus},
+  journal={Chemometrics and Intelligent Laboratory Systems},
+  pages={104446},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{rudin1992nonlinear,
+  title={Nonlinear total variation based noise removal algorithms},
+  author={Rudin, Leonid I and Osher, Stanley and Fatemi, Emad},
+  journal={Physica D: nonlinear phenomena},
+  volume={60},
+  number={1-4},
+  pages={259--268},
+  year={1992},
+  publisher={Elsevier}
+}
