--- a/docs/references.bib
+++ b/docs/references.bib
@@ -116,3 +116,76 @@
   year={1992},
   publisher={Elsevier}
 }
+
+@book{boyd2011distributed,
+  title={Distributed optimization and statistical learning via the alternating direction method of multipliers},
+  author={Boyd, Stephen and Parikh, Neal and Chu, Eric},
+  year={2011},
+  publisher={Now Publishers Inc}
+}
+
+@article{huang2016flexible,
+  title={A flexible and efficient algorithmic framework for constrained matrix and tensor factorization},
+  author={Huang, Kejun and Sidiropoulos, Nicholas D and Liavas, Athanasios P},
+  journal={IEEE Transactions on Signal Processing},
+  volume={64},
+  number={19},
+  pages={5052--5065},
+  year={2016},
+  publisher={IEEE}
+}
+
+@inproceedings{chew2007cross,
+  title={Cross-language information retrieval using PARAFAC2},
+  author={Chew, Peter A and Bader, Brett W and Kolda, Tamara G and Abdelali, Ahmed},
+  booktitle={Proceedings of the 13th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={143--152},
+  year={2007}
+}
+
+@inproceedings{gujral2020spade,
+  title={Spade: S treaming pa rafac2 de composition for large datasets},
+  author={Gujral, Ekta and Theocharous, Georgios and Papalexakis, Evangelos E},
+  booktitle={Proceedings of the 2020 SIAM International Conference on Data Mining},
+  pages={577--585},
+  year={2020},
+  organization={SIAM}
+}
+
+@article{amigo2008solving,
+  title={Solving GC-MS problems with parafac2},
+  author={Amigo, Jos{\'e} Manuel and Skov, Thomas and Bro, Rasmus and Coello, Jordi and Maspoch, Santiago},
+  journal={TrAC Trends in Analytical Chemistry},
+  volume={27},
+  number={8},
+  pages={714--725},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@inproceedings{afshar2018copa,
+  title={COPA: Constrained PARAFAC2 for sparse \& large datasets},
+  author={Afshar, Ardavan and Perros, Ioakeim and Papalexakis, Evangelos E and Searles, Elizabeth and Ho, Joyce and Sun, Jimeng},
+  booktitle={Proceedings of the 27th ACM International Conference on Information and Knowledge Management},
+  pages={793--802},
+  year={2018}
+}
+
+@inproceedings{cohen2018nonnegative,
+  title={Nonnegative PARAFAC2: A flexible coupling approach},
+  author={Cohen, Jeremy E and Bro, Rasmus},
+  booktitle={International Conference on Latent Variable Analysis and Signal Separation},
+  pages={89--98},
+  year={2018},
+  organization={Springer}
+}
+
+@article{van2020getting,
+  title={Getting to the core of PARAFAC2, a nonnegative approach},
+  author={Van Benthem, Mark H and Keller, Timothy J and Gillispie, Gregory D and DeJong, Stephanie A},
+  journal={Chemometrics and Intelligent Laboratory Systems},
+  volume={206},
+  pages={104127},
+  year={2020},
+  publisher={Elsevier}
+}
