Added reference for unimodality constraints

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -189,3 +189,14 @@
   year={2020},
   publisher={Elsevier}
 }
+
+@article{stout2008unimodal,
+  title={Unimodal regression via prefix isotonic regression},
+  author={Stout, Quentin F},
+  journal={Computational Statistics \& Data Analysis},
+  volume={53},
+  number={2},
+  pages={289--297},
+  year={2008},
+  publisher={Elsevier}
+}
