--- a/docs/references.bib
+++ b/docs/references.bib
@@ -49,11 +49,12 @@
   year={2021}
 }
 
-@article{roald2021parafac2,
-  title={PARAFAC2 AO-ADMM: Constraints in all modes},
+@inproceedings{roald2021parafac2,
+  title={{PARAFAC2} {AO-ADMM}: Constraints in all modes},
   author={Roald, Marie and Schenker, Carla and Cohen, Jeremy E and Acar, Evrim},
-  journal={arXiv preprint arXiv:2102.02087},
-  year={2021}
+  booktitle={Proceedings of the 29th European Signal Processing Conference},
+  year={2021},
+  organization={EURASIP}
 }
 
 @article{wise1999comparison,
