Added about matcouply section

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -201,3 +201,41 @@
   year={2008},
   publisher={Elsevier}
 }
+
+@inproceedings{ren2020robust,
+  title={Robust Irregular Tensor Factorization and Completion for Temporal Health Data Analysis},
+  author={Ren, Yifei and Lou, Jian and Xiong, Li and Ho, Joyce C},
+  booktitle={Proceedings of the 29th ACM International Conference on Information \& Knowledge Management},
+  pages={1295--1304},
+  year={2020}
+}
+
+@inproceedings{roald2020tracing,
+  title={Tracing network evolution using the parafac2 model},
+  author={Roald, Marie and Bhinge, Suchita and Jia, Chunying and Calhoun, Vince and Adal{\i}, T{\"u}lay and Acar, Evrim},
+  booktitle={ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={1100--1104},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{madsen2017quantifying,
+  title={Quantifying functional connectivity in multi-subject fMRI data using component models},
+  author={Madsen, Kristoffer H and Churchill, Nathan W and M{\o}rup, Morten},
+  journal={Human brain mapping},
+  volume={38},
+  number={2},
+  pages={882--899},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{ruckebusch2013multivariate,
+  title={Multivariate curve resolution: a review of advanced and tailored applications and challenges},
+  author={Ruckebusch, C and Blanchet, L},
+  journal={Analytica chimica acta},
+  volume={765},
+  pages={28--36},
+  year={2013},
+  publisher={Elsevier}
+}
