Fixed some notation inconsistencies

--- a/docs/auto_examples/plot_custom_penalty.ipynb
+++ b/docs/auto_examples/plot_custom_penalty.ipynb
@@ -76,7 +76,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Generate simulated data that follows the PARAFAC2 constraint\nWe start by generating some components, for the $\\mathbf{A}$ and $\\mathbf{C}$ components, we use uniformly\ndistributed component vector elements. For the $\\mathbf{B}_i$-components, we create two unimodal vectors and one\ncomponent vector with uniformly distributed elements, and shift these vectors for each $i$.\n\n"
+        "## Generate simulated data that follows the PARAFAC2 constraint\nWe start by generating some components, for the $\\mathbf{A}$ and $\\mathbf{C}$ components, we use uniformly\ndistributed component vector elements. For the $\\mathbf{B}^{(i)}$-components, we create two unimodal vectors and one\ncomponent vector with uniformly distributed elements, and shift these vectors for each $i$.\n\n"
       ]
     },
     {
@@ -112,7 +112,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "For the $\\mathbf{B}_i$-s, we see that component 0 and 1 are unimodal, while component 2 is not.\n\n"
+        "For the $\\mathbf{B}^{(i)}$-s, we see that component 0 and 1 are unimodal, while component 2 is not.\n\n"
       ]
     },
     {
@@ -137,7 +137,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Use the ``regs`` parameter to input regularization classes\nMatcouply automatically parses the constraints from the ``parafac2_aoadmm`` and ``cmf_aoadmm`` funciton\narguments. However, sometimes, you may want full control over how a penalty is implemented. In that case,\nthe ``regs``-argument is useful. This argument makes it possible to specify exactly which penalty instances\nto use.\n\nSince the components are non-negative, it makes sense to fit a non-negative PARAFAC2 model, however,\nwe also know that two of the $\\mathbf{B}_i$-component vectors are unimodal, so we first try with\na fully unimodal decomposition.\n\n"
+        "## Use the ``regs`` parameter to input regularization classes\nMatcouply automatically parses the constraints from the ``parafac2_aoadmm`` and ``cmf_aoadmm`` funciton\narguments. However, sometimes, you may want full control over how a penalty is implemented. In that case,\nthe ``regs``-argument is useful. This argument makes it possible to specify exactly which penalty instances\nto use.\n\nSince the components are non-negative, it makes sense to fit a non-negative PARAFAC2 model, however,\nwe also know that two of the $\\mathbf{B}^{(i)}$-component vectors are unimodal, so we first try with\na fully unimodal decomposition.\n\n"
       ]
     },
     {
@@ -184,14 +184,14 @@
       },
       "outputs": [],
       "source": [
-        "out_weights, (out_A, out_B_is, out_C) = out_cmf\nout_A = out_A[:, permutation]\nout_B_is = [out_B_i[:, permutation] for out_B_i in out_B_is]\nout_C = out_C[:, permutation]\n\nfig, axes = plt.subplots(2, 3, tight_layout=True)\n\naxes[0, 0].plot(normalize(out_A))\naxes[0, 0].set_title(\"$\\\\mathbf{A}$\")\n\naxes[0, 1].plot(normalize(out_C))\naxes[0, 1].set_title(\"$\\\\mathbf{C}$\")\n\naxes[0, 2].axis(\"off\")\n\naxes[1, 0].plot(normalize(out_B_is[0]))\naxes[1, 0].set_title(\"$\\\\mathbf{B}_0$\")\n\naxes[1, 1].plot(normalize(out_B_is[I // 2]))\naxes[1, 1].set_title(f\"$\\\\mathbf{{B}}_{{{I//2}}}$\")\n\naxes[1, 2].plot(normalize(out_B_is[-1]))\naxes[1, 2].set_title(f\"$\\\\mathbf{{B}}_{{{I-1}}}$\")\nfig.legend([\"Component 0\", \"Component 1\", \"Component 2\"], bbox_to_anchor=(0.95, 0.75), loc=\"center right\")\n\nfig.suptitle(r\"Unimodality on the $\\mathbf{B}_i$-components\")\nplt.show()"
+        "out_weights, (out_A, out_B_is, out_C) = out_cmf\nout_A = out_A[:, permutation]\nout_B_is = [out_B_i[:, permutation] for out_B_i in out_B_is]\nout_C = out_C[:, permutation]\n\nfig, axes = plt.subplots(2, 3, tight_layout=True)\n\naxes[0, 0].plot(normalize(out_A))\naxes[0, 0].set_title(\"$\\\\mathbf{A}$\")\n\naxes[0, 1].plot(normalize(out_C))\naxes[0, 1].set_title(\"$\\\\mathbf{C}$\")\n\naxes[0, 2].axis(\"off\")\n\naxes[1, 0].plot(normalize(out_B_is[0]))\naxes[1, 0].set_title(\"$\\\\mathbf{B}_0$\")\n\naxes[1, 1].plot(normalize(out_B_is[I // 2]))\naxes[1, 1].set_title(f\"$\\\\mathbf{{B}}_{{{I//2}}}$\")\n\naxes[1, 2].plot(normalize(out_B_is[-1]))\naxes[1, 2].set_title(f\"$\\\\mathbf{{B}}_{{{I-1}}}$\")\nfig.legend([\"Component 0\", \"Component 1\", \"Component 2\"], bbox_to_anchor=(0.95, 0.75), loc=\"center right\")\n\nfig.suptitle(r\"Unimodality on the $\\mathbf{B}^{(i)}$-components\")\nplt.show()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We see that the $\\mathbf{C}$-component vectors all follow the same pattern and that the the\n$\\mathbf{A}$-component vectors all follow a similar pattern. This is not the case with the real,\nuncorrelated random, components. The $\\mathbf{B}_i$-component vectors also follow a strange pattern\nwith peaks jumping forwards and backwards, which we know are not the case with the real components either.\n\nHowever, this strange behaviour is not too surprising, considering that there are only two uniomdal component\nvectors in the data. So this model that assumes all unimodal components might be too restrictive.\n\n"
+        "We see that the $\\mathbf{C}$-component vectors all follow the same pattern and that the the\n$\\mathbf{A}$-component vectors all follow a similar pattern. This is not the case with the real,\nuncorrelated random, components. The $\\mathbf{B}^{(i)}$-component vectors also follow a strange pattern\nwith peaks jumping forwards and backwards, which we know are not the case with the real components either.\n\nHowever, this strange behaviour is not too surprising, considering that there are only two uniomdal component\nvectors in the data. So this model that assumes all unimodal components might be too restrictive.\n\n"
       ]
     },
     {
@@ -270,14 +270,14 @@
       },
       "outputs": [],
       "source": [
-        "out_weights, (out_A, out_B_is, out_C) = out_cmf\nout_A = out_A[:, permutation]\nout_B_is = [out_B_i[:, permutation] for out_B_i in out_B_is]\nout_C = out_C[:, permutation]\n\nfig, axes = plt.subplots(2, 3, tight_layout=True)\n\naxes[0, 0].plot(normalize(out_A))\naxes[0, 0].set_title(\"$\\\\mathbf{A}$\")\n\naxes[0, 1].plot(normalize(out_C))\naxes[0, 1].set_title(\"$\\\\mathbf{C}$\")\n\naxes[0, 2].axis(\"off\")\n\naxes[1, 0].plot(normalize(out_B_is[0]))\naxes[1, 0].set_title(\"$\\\\mathbf{B}_0$\")\n\naxes[1, 1].plot(normalize(out_B_is[I // 2]))\naxes[1, 1].set_title(f\"$\\\\mathbf{{B}}_{{{I//2}}}$\")\n\naxes[1, 2].plot(normalize(out_B_is[-1]))\naxes[1, 2].set_title(f\"$\\\\mathbf{{B}}_{{{I-1}}}$\")\nfig.legend([\"Component 0\", \"Component 1\", \"Component 2\"], bbox_to_anchor=(0.95, 0.75), loc=\"center right\")\nfig.suptitle(r\"Custom uniomdality on the $\\mathbf{B}_i$-components\")\nplt.show()"
+        "out_weights, (out_A, out_B_is, out_C) = out_cmf\nout_A = out_A[:, permutation]\nout_B_is = [out_B_i[:, permutation] for out_B_i in out_B_is]\nout_C = out_C[:, permutation]\n\nfig, axes = plt.subplots(2, 3, tight_layout=True)\n\naxes[0, 0].plot(normalize(out_A))\naxes[0, 0].set_title(\"$\\\\mathbf{A}$\")\n\naxes[0, 1].plot(normalize(out_C))\naxes[0, 1].set_title(\"$\\\\mathbf{C}$\")\n\naxes[0, 2].axis(\"off\")\n\naxes[1, 0].plot(normalize(out_B_is[0]))\naxes[1, 0].set_title(\"$\\\\mathbf{B}_0$\")\n\naxes[1, 1].plot(normalize(out_B_is[I // 2]))\naxes[1, 1].set_title(f\"$\\\\mathbf{{B}}_{{{I//2}}}$\")\n\naxes[1, 2].plot(normalize(out_B_is[-1]))\naxes[1, 2].set_title(f\"$\\\\mathbf{{B}}_{{{I-1}}}$\")\nfig.legend([\"Component 0\", \"Component 1\", \"Component 2\"], bbox_to_anchor=(0.95, 0.75), loc=\"center right\")\nfig.suptitle(r\"Custom uniomdality on the $\\mathbf{B}^{(i)}$-components\")\nplt.show()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We see that the model finds much more sensible component vectors. The $\\mathbf{A}$- and\n$\\mathbf{C}$-component vectors no longer seem correlated, and the peaks of the $\\mathbf{B}_i$-component\nvectors no longer jump around.\n\n"
+        "We see that the model finds much more sensible component vectors. The $\\mathbf{A}$- and\n$\\mathbf{C}$-component vectors no longer seem correlated, and the peaks of the $\\mathbf{B}^{(i)}$-component\nvectors no longer jump around.\n\n"
       ]
     }
   ],
@@ -297,7 +297,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.8"
+      "version": "3.9.7"
     }
   },
   "nbformat": 4,
