Fixed capitalization of titles

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -21,7 +21,7 @@
 }
 
 @article{kiers1999parafac2,
-  title={PARAFAC2—Part I. A direct fitting algorithm for the PARAFAC2 model},
+  title={{PARAFAC2}—{P}art {I}. A direct fitting algorithm for the {PARAFAC2} model},
   author={Kiers, Henk AL and Ten Berge, Jos MF and Bro, Rasmus},
   journal={Journal of Chemometrics: A Journal of the Chemometrics Society},
   volume={13},
@@ -43,7 +43,7 @@
 }
 
 @article{roald2021admm,
-  title={An AO-ADMM approach to constraining PARAFAC2 on all modes},
+  title={An AO-ADMM approach to constraining {PARAFAC2} on all modes},
   author={Roald, Marie and Schenker, Carla and Bro, Rasmus and Cohen, Jeremy E and Acar, Evrim},
   journal={arXiv preprint arXiv:2110.01278},
   year={2021}
@@ -69,7 +69,7 @@
 }
 
 @article{wise2001application,
-  title={Application of PARAFAC2 to fault detection and diagnosis in semiconductor etch},
+  title={Application of {PARAFAC2} to fault detection and diagnosis in semiconductor etch},
   author={Wise, Barry M and Gallagher, Neal B and Martin, Elaine B},
   journal={Journal of Chemometrics: A Journal of the Chemometrics Society},
   volume={15},
@@ -99,7 +99,7 @@
 }
 
 @article{yu2021parafac2,
-  title={PARAFAC2 and local minima},
+  title={{PARAFAC2} and local minima},
   author={Yu, Huiwen and Bro, Rasmus},
   journal={Chemometrics and Intelligent Laboratory Systems},
   pages={104446},
@@ -137,7 +137,7 @@
 }
 
 @inproceedings{chew2007cross,
-  title={Cross-language information retrieval using PARAFAC2},
+  title={Cross-language information retrieval using {PARAFAC2}},
   author={Chew, Peter A and Bader, Brett W and Kolda, Tamara G and Abdelali, Ahmed},
   booktitle={Proceedings of the 13th ACM SIGKDD international conference on Knowledge discovery and data mining},
   pages={143--152},
@@ -145,7 +145,7 @@
 }
 
 @inproceedings{gujral2020spade,
-  title={Spade: S treaming pa rafac2 de composition for large datasets},
+  title={{SPADE:} Streaming {PARAFAC2} {DEcomposition} for Large Datasets},
   author={Gujral, Ekta and Theocharous, Georgios and Papalexakis, Evangelos E},
   booktitle={Proceedings of the 2020 SIAM International Conference on Data Mining},
   pages={577--585},
@@ -154,7 +154,7 @@
 }
 
 @article{amigo2008solving,
-  title={Solving GC-MS problems with parafac2},
+  title={Solving {GC-MS} problems with {PARAFAC2}},
   author={Amigo, Jos{\'e} Manuel and Skov, Thomas and Bro, Rasmus and Coello, Jordi and Maspoch, Santiago},
   journal={TrAC Trends in Analytical Chemistry},
   volume={27},
@@ -165,7 +165,7 @@
 }
 
 @inproceedings{afshar2018copa,
-  title={COPA: Constrained PARAFAC2 for sparse \& large datasets},
+  title={{COPA:} Constrained {PARAFAC2} for sparse \& large datasets},
   author={Afshar, Ardavan and Perros, Ioakeim and Papalexakis, Evangelos E and Searles, Elizabeth and Ho, Joyce and Sun, Jimeng},
   booktitle={Proceedings of the 27th ACM International Conference on Information and Knowledge Management},
   pages={793--802},
@@ -173,7 +173,7 @@
 }
 
 @inproceedings{cohen2018nonnegative,
-  title={Nonnegative PARAFAC2: A flexible coupling approach},
+  title={Nonnegative {PARAFAC2:} A flexible coupling approach},
   author={Cohen, Jeremy E and Bro, Rasmus},
   booktitle={International Conference on Latent Variable Analysis and Signal Separation},
   pages={89--98},
@@ -182,7 +182,7 @@
 }
 
 @article{van2020getting,
-  title={Getting to the core of PARAFAC2, a nonnegative approach},
+  title={Getting to the core of {PARAFAC2}, a nonnegative approach},
   author={Van Benthem, Mark H and Keller, Timothy J and Gillispie, Gregory D and DeJong, Stephanie A},
   journal={Chemometrics and Intelligent Laboratory Systems},
   volume={206},
@@ -211,7 +211,7 @@
 }
 
 @inproceedings{roald2020tracing,
-  title={Tracing network evolution using the parafac2 model},
+  title={Tracing network evolution using the {PARAFAC2} model},
   author={Roald, Marie and Bhinge, Suchita and Jia, Chunying and Calhoun, Vince and Adal{\i}, T{\"u}lay and Acar, Evrim},
   booktitle={ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
   pages={1100--1104},
@@ -220,7 +220,7 @@
 }
 
 @article{madsen2017quantifying,
-  title={Quantifying functional connectivity in multi-subject fMRI data using component models},
+  title={Quantifying functional connectivity in multi-subject {fMRI} data using component models},
   author={Madsen, Kristoffer H and Churchill, Nathan W and M{\o}rup, Morten},
   journal={Human brain mapping},
   volume={38},
