--- a/docs/references.bib
+++ b/docs/references.bib
@@ -239,3 +239,57 @@
   year={2013},
   publisher={Elsevier}
 }
+
+@article{gong2016coupled,
+  author={Gong, Maoguo and Zhang, Puzhao and Su, Linzhi and Liu, Jia},
+  journal={IEEE Transactions on Geoscience and Remote Sensing}, 
+  title={Coupled Dictionary Learning for Change Detection From Multisource Data}, 
+  year={2016},
+  volume={54},
+  number={12},
+  pages={7077-7091},
+  doi={10.1109/TGRS.2016.2594952}}
+
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
+
+@incollection{NEURIPS2019_9015,
+title = {{PyTorch}: An Imperative Style, High-Performance Deep Learning Library},
+author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
+booktitle = {Advances in Neural Information Processing Systems 32},
+editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+pages = {8024--8035},
+year = {2019},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
+}
+
+@article{camp2019pymcr,
+  title={{PyMCR}: A python library for multivariatecurve resolution analysis with alternating regression (MCR-AR)},
+  author={Camp Jr, Charles H},
+  journal={Journal of Research of the National Institute of Standards and Technology},
+  volume={124},
+  pages={1--10},
+  year={2019},
+  publisher={Superintendent of Documents}
+}
+
+@article{kiers1994hierarchical,
+  title={Hierarchical relations between methods for simultaneous component analysis and a technique for rotation to a simple simultaneous structure},
+  author={Kiers, Henk AL and ten Berge, Jos MF},
+  journal={British Journal of mathematical and statistical psychology},
+  volume={47},
+  number={1},
+  pages={109--126},
+  year={1994},
+  publisher={Wiley Online Library}
+}
