Updated SIMODS reference

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -44,9 +44,10 @@
 
 @article{roald2021admm,
   title={An AO-ADMM approach to constraining {PARAFAC2} on all modes},
-  author={Roald, Marie and Schenker, Carla and Bro, Rasmus and Cohen, Jeremy E and Acar, Evrim},
-  journal={arXiv preprint arXiv:2110.01278},
-  year={2021}
+  author={Roald, Marie and Schenker, Carla and Calhoun, Vince D and Adali, T\"ulai and Bro, Rasmus and Cohen, Jeremy E and Acar, Evrim},
+  journal={Accepted for publication in {SIAM} Journal on Mathematics of Data Science},
+  url={https://arxiv.org/abs/2110.01278},
+  year={2022}
 }
 
 @inproceedings{roald2021parafac2,
@@ -242,8 +243,8 @@
 
 @article{gong2016coupled,
   author={Gong, Maoguo and Zhang, Puzhao and Su, Linzhi and Liu, Jia},
-  journal={IEEE Transactions on Geoscience and Remote Sensing}, 
-  title={Coupled Dictionary Learning for Change Detection From Multisource Data}, 
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  title={Coupled Dictionary Learning for Change Detection From Multisource Data},
   year={2016},
   volume={54},
   number={12},
