Initial contribution commit

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -294,3 +294,13 @@ url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-perf
   year={1994},
   publisher={Wiley Online Library}
 }
+
+@INPROCEEDINGS{chatzis2023timeaware,
+  author={Chatzis, Christos and Pfeffer, Max and Lind, Pedro and Acar, Evrim},
+  booktitle={2023 IEEE 33rd International Workshop on Machine Learning for Signal Processing (MLSP)}, 
+  title={A Time-Aware Tensor Decomposition for Tracking Evolving Patterns}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1-6},
+  doi={10.1109/MLSP55844.2023.10285943}}
